Finished user controller, validator, routes update
