# routes/routes.js
@@ -1,10 +1,10 @@
 import express from 'express';
 import ticketRoutes from './tickets.js';
-//import userRoutes from './users.js';
+import userRoutes from './users.js';
 
 const router = express.Router();
 
 router.use('/tickets', ticketRoutes);
-//router.use('/users', userRoutes);
+router.use('/users', userRoutes);
 
 export default router;
