# routes/users.js
@@ -7,6 +7,11 @@ import {
     updateUserRole,
     deleteUser
 } from '../controllers/users.js'
+import {
+    validateCreateUser,
+    validateUpdateUser,
+    validateUserRole
+} from '../middleware/validateUser.js';
 import { checkValidation } from '../middleware/checkValidation.js';
 import { ensureAuth } from '../middleware/ensureAuth.js';
 
@@ -14,9 +19,9 @@ const router = express.Router();
 
 router.get('/users', getAllUsers);
 router.get('/users/:id', getUserById);
-router.post('/users', checkValidation, createUser);
-router.put('/users/:id', checkValidation, updateUser);
-router.put('/users/:id/role', checkValidation, updateUserRole);
+router.post('/users', validateCreateUser, checkValidation, createUser);
+router.put('/users/:id', validateUpdateUser, checkValidation, updateUser);
+router.put('/users/:id/role', validateUserRole, checkValidation, updateUserRole);
 router.delete('/users/:id', deleteUser);
 
 export default router;
